remove slashes typo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <h1>Melissa Ng</h1>
     <div class="logoNavBar">
-      <a href="https://github.com/MelissaN"><img class="logolinks" src="images/LogoGithub.png" alt="Gith\ub"></a>
+      <a href="https://github.com/MelissaN"><img class="logolinks" src="images/LogoGithub.png" alt="Github"></a>
       <a href="https://drive.google.com/file/d/1Vj2QlqLSW1eZW_UKhJnTBPGL0T8OcrpN/view"><img class="logolinks" src="images/LogoResume.png" alt="Resume"></a>
-      <a href="https://www.linkedin.com/in/msmelissang/"><img class="logolinks" src="images/LogoLinkedIn\.png" alt="LinkedIn"></a>
-      <a href="https://medium.com/@MelissaNg__"><img class="logolinks" src="images/LogoMedium.png" alt="\Medium"></a>
-      <a href="https://thenewstack.io/author/melissa-ng/"><img class="logolinks" src="images/LogoTheNewS\tack.png" alt="TheNewStack.io"></a>
-      <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt=\"Twitter"></a>
+      <a href="https://www.linkedin.com/in/msmelissang/"><img class="logolinks" src="images/LogoLinkedIn.png" alt="LinkedIn"></a>
+      <a href="https://medium.com/@MelissaNg__"><img class="logolinks" src="images/LogoMedium.png" alt="Medium"></a>
+      <a href="https://thenewstack.io/author/melissa-ng/"><img class="logolinks" src="images/LogoTheNewStack.png" alt="TheNewStack.io"></a>
+      <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt="Twitter"></a>
     </div>
 
     <!-- TODO: PROJECTS MAKE AND ADD GIF DEMOS -->
