correct image name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img class="proj" src="projects/wildfire.gif" alt="Wildfire">
         <img class="proj" src="projects/shell.gif" alt="Simple Shell">
         <img class="proj" src="projects/printf.gif" alt="Printf">
-        <img class="proj" src="projects/dockerHeartSecurity.png" alt="Docker Heart Security">
+        <img class="proj" src="projects/dockerHearts.png" alt="Docker Heart Security">
         <img class="proj" src="projects/ml.gif" alt="Machine Learning for Non Techies">
         <img class="proj" src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
     </div>
