--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-    <h1>Melissa Ng</h1>
+    <div class="top">
+      <h1>Melissa Ng</h1>
+    </div>
     <div class="logoNavBar">
       <a href="https://github.com/MelissaN"><img class="logolinks" src="images/LogoGithub.png" alt="Github"></a>
       <a href="https://drive.google.com/file/d/1Vj2QlqLSW1eZW_UKhJnTBPGL0T8OcrpN/view"><img class="logolinks" src="images/LogoResume.png" alt="Resume"></a>
@@ -19,19 +21,19 @@
       <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt="Twitter"></a>
     </div>
 
-    <!-- TODO: PROJECTS MAKE AND ADD GIF DEMOS -->
-    <h2>Portfolio</h2>
+    <br><br>
+
+    <!-- TODO: ADD DESCRIPTIONS -->
     <div class="projects">
-        <img class="proj" src="projects/wildfire.gif" alt="Wildfire">
-        <img class="proj" src="projects/shell.gif" alt="Simple Shell">
-        <img class="proj" src="projects/printf.gif" alt="Printf">
-        <img class="proj" src="projects/dockerHearts.png" alt="Docker Heart Security">
-        <img class="proj" src="projects/ml.gif" alt="Machine Learning for Non Techies">
-        <img class="proj" src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+      <img class="proj" src="projects/wildfire.gif" alt="Wildfire">
+      <img class="proj" src="projects/shell.gif" alt="Simple Shell">
+      <img class="proj" src="projects/printf.gif" alt="Printf">
+      <img class="proj" src="projects/dockerHearts.png" alt="Docker Heart Security">
+      <img class="proj" src="projects/ml.gif" alt="Machine Learning for Non Techies">
+      <img class="proj" src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
     </div>
   </body>
 
-  <!-- TODO: BLACK FOOTER -->
   <footer>
     <p>cheersmelissa@gmail.com</p>
     <p>347.907.5885</p>
