--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
 
   <body>
-    <div class="top">
-      <h1>Melissa Ng</h1>
-    </div>
+    <h1>Melissa Ng</h1>
     <div class="logoNavBar">
       <a href="https://github.com/MelissaN"><img class="logolinks" src="images/LogoGithub.png" alt="Github"></a>
       <a href="https://drive.google.com/file/d/1Vj2QlqLSW1eZW_UKhJnTBPGL0T8OcrpN/view"><img class="logolinks" src="images/LogoResume.png" alt="Resume"></a>
@@ -20,17 +18,35 @@
       <a href="https://thenewstack.io/author/melissa-ng/"><img class="logolinks" src="images/LogoTheNewStack.png" alt="TheNewStack.io"></a>
       <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt="Twitter"></a>
     </div>
-
+    
     <br><br>
 
-    <!-- TODO: ADD DESCRIPTIONS -->
+    <h2>Portfolio</h2>
     <div class="projects">
-      <img class="proj" src="projects/wildfire.gif" alt="Wildfire">
-      <img class="proj" src="projects/shell.gif" alt="Simple Shell">
-      <img class="proj" src="projects/printf.gif" alt="Printf">
-      <img class="proj" src="projects/dockerHearts.png" alt="Docker Heart Security">
-      <img class="proj" src="projects/ml.gif" alt="Machine Learning for Non Techies">
-      <img class="proj" src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+      <div class="proj">
+        <img src="projects/wildfire.gif" alt="Wildfire">
+        <div class="desc">Wildfire website</div>
+      </div>
+      <div class="proj">
+        <img class="proj" src="projects/shell.gif" alt="Simple Shell">
+        <div class="desc">Simple Shell</div>
+      </div>
+      <div class="proj">
+        <img src="projects/printf.gif" alt="Printf">
+        <div class="desc">Custom Printf Function</div>
+      </div>
+      <div class="proj">
+        <img src="projects/dockerHeartSecurity.png" alt="Docker Heart Security">
+        <div class="desc">Docker Hearts Security</div>
+      </div>
+      <div class="proj">
+        <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
+        <div class="desc">Machine Learning for Non Techies</div>
+      </div>
+      <div class="proj">
+        <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+      <div class="desc">Bitcoin Crypto Predictor</div>
+      </div>
     </div>
   </body>
 
