correct image url

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="desc">Custom Printf Function</div>
       </div>
       <div class="proj">
-        <img src="projects/dockerHeartSecurity.png" alt="Docker Heart Security">
+        <img src="projects/dockerHearts.png" alt="Docker Heart Security">
         <div class="desc">Docker Hearts Security</div>
       </div>
       <div class="proj">
