reorder proj according to color gradient change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <h1>Melissa Ng</h1>
     <div class="logoNavBar">
       <a href="https://github.com/MelissaN"><img class="logolinks" src="images/LogoGithub.png" alt="Github"></a>
       <a href="https://drive.google.com/file/d/1Vj2QlqLSW1eZW_UKhJnTBPGL0T8OcrpN/view"><img class="logolinks" src="images/LogoResume.png" alt="Resume"></a>
@@ -19,33 +18,39 @@
       <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt="Twitter"></a>
     </div>
     
+    <br><br><br>
+    <h1>Melissa Ng</h1>
     <br><br>
 
-    <h2>Portfolio</h2>
+    <h2>Some Projects</h2>
     <div class="projects">
       <div class="proj">
-        <img src="projects/wildfire.gif" alt="Wildfire">
-        <div class="desc">Wildfire website</div>
+        <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
+        <div class="desc">Machine Learning for Non Techies</div>
       </div>
       <div class="proj">
         <img class="proj" src="projects/shell.gif" alt="Simple Shell">
         <div class="desc">Simple Shell</div>
       </div>
       <div class="proj">
-        <img src="projects/printf.gif" alt="Printf">
-        <div class="desc">Custom Printf Function</div>
+        <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+      <div class="desc">Bitcoin Crypto Predictor</div>
       </div>
       <div class="proj">
-        <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
-        <div class="desc">Machine Learning for Non Techies</div>
+        <img src="projects/printf.gif" alt="Printf">
+        <div class="desc">Custom Printf Function</div>
       </div>
       <div class="proj">
         <img src="projects/dockerHearts.png" alt="Docker Heart Security">
         <div class="desc">Docker Hearts Security</div>
       </div>
       <div class="proj">
-        <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
-      <div class="desc">Bitcoin Crypto Predictor</div>
+        <img src="projects/airbnb.png" alt="Airbnb Housing Clone">
+      <div class="desc">Airbnb Housing Clone</div>
+      </div>
+      <div class="proj">
+        <img src="projects/wildfire.gif" alt="Wildfire">
+        <div class="desc">Wildfire website</div>
       </div>
     </div>
   </body>
