add project on site: url_shortener

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <h2>Some Projects</h2>
     <div class="projects">
       <div class="proj">
+        <img src="projects/shorty_url.gif" alt="URL Shortener">
+        <div class="desc">URL Shortener</div>
+      </div>
+      <div class="proj">
         <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
         <div class="desc">Machine Learning for Non Techies</div>
       </div>
