incorporate bootstrap; add google fonts; test out

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>Melissa Ng</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <link rel="favicon" type="image/icon" href="images/LogoResume.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
+
+</head>
 
   <body>
     <div class="logoNavBar">
@@ -17,52 +20,62 @@
       <a href="https://thenewstack.io/author/melissa-ng/"><img class="logolinks" src="images/LogoTheNewStack.png" alt="TheNewStack.io"></a>
       <a href="https://twitter.com/MelissaNg__"><img class="logolinks" src="images/LogoTwitter.png" alt="Twitter"></a>
     </div>
-    
-    <br><br><br>
-    <h1>Melissa Ng</h1>
-    <br><br>
 
-    <h2>Some Projects</h2>
-    <div class="projects">
-      <div class="proj">
-        <img src="projects/shorty_url.gif" alt="URL Shortener">
-        <div class="desc">URL Shortener</div>
+    <br><br>
+    <center><img src="images/melzy.png" alt="my photo"></center>
+    <div class="jumbotron text-center">
+      <h1>Melissa Ng</h1>
+      <p>Dabbles</p>
+    </div>
+
+
+    <p class="categories">Some Projects</h2>
+     <div class="container">
+       <div class="row">
+         <div class="col-sm-4">
+           <img src="projects/shorty_url.gif" alt="URL Shortener">
+           <p>URL Shortener</p>
+         </div>
+         <div class="col-sm-4">
+           <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
+          <p>Machine Learning for Non Techies</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="projects/shell.gif" alt="Simple Shell">
+          <p>Simple Shell</p>
+        </div>
       </div>
-      <div class="proj">
-        <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
-        <div class="desc">Machine Learning for Non Techies</div>
+      <div class="row">
+         <div class="col-sm-4">
+          <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+          <p>Bitcoin Crypto Predictor</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="projects/printf.gif" alt="Printf">
+          <p>Custom Printf Function</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="projects/dockerHearts.png" alt="Docker Heart Security">
+          <p>Docker Hearts Security</p>
+        </div>
       </div>
-      <div class="proj">
-        <img class="proj" src="projects/shell.gif" alt="Simple Shell">
-        <div class="desc">Simple Shell</div>
-      </div>
-      <div class="proj">
-        <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
-      <div class="desc">Bitcoin Crypto Predictor</div>
-      </div>
-      <div class="proj">
-        <img src="projects/printf.gif" alt="Printf">
-        <div class="desc">Custom Printf Function</div>
-      </div>
-      <div class="proj">
-        <img src="projects/dockerHearts.png" alt="Docker Heart Security">
-        <div class="desc">Docker Hearts Security</div>
-      </div>
-      <div class="proj">
-        <img src="projects/airbnb.png" alt="Airbnb Housing Clone">
-      <div class="desc">Airbnb Housing Clone</div>
-      </div>
-      <div class="proj">
-        <img src="projects/wildfire.gif" alt="Wildfire">
-        <div class="desc">Wildfire website</div>
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="projects/airbnb.png" alt="Airbnb Housing Clone">
+          <p>Airbnb Housing Clone</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="projects/wildfire.gif" alt="Wildfire">
+          <p>Wildfire website</p>
+        </div>
       </div>
     </div>
   </body>
 
   <footer>
-    <p>cheersmelissa@gmail.com</p>
-    <p>347.907.5885</p>
-    <p>Made in New York & California</p>
+    <br>cheersmelissa@gmail.com
+    <br>347.907.5885
+    <br>Made in New York & California
   </footer>
 
-<html>
+</html>
