restyle and reorganize positioning

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
-
-</head>
+  </head>
 
   <body>
     <div class="logoNavBar">
@@ -22,41 +21,40 @@
     </div>
 
     <br><br>
-    <center><img src="images/melzy.png" alt="my photo"></center>
     <div class="jumbotron text-center">
+      <center><img src="images/melzy.png" class="img-fluid" alt="my photo"></center>
       <h1>Melissa Ng</h1>
       <p>Dabbles</p>
     </div>
 
-
-    <p class="categories">Some Projects</h2>
-     <div class="container">
-       <div class="row">
-         <div class="col-sm-4">
-           <img src="projects/shorty_url.gif" alt="URL Shortener">
-           <p>URL Shortener</p>
-         </div>
-         <div class="col-sm-4">
-           <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
-          <p>Machine Learning for Non Techies</p>
+    <p class="categories">Some Projects</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <p>URL Shortener</p>
+          <img src="projects/shorty_url.gif" alt="URL Shortener">
         </div>
         <div class="col-sm-4">
-          <img src="projects/shell.gif" alt="Simple Shell">
+          <p>Machine Learning for Non Techies</p>
+          <img src="projects/ml.gif" alt="Machine Learning for Non Techies">
+        </div>
+        <div class="col-sm-4">
           <p>Simple Shell</p>
+          <img src="projects/shell.gif" alt="Simple Shell">
         </div>
       </div>
       <div class="row">
-         <div class="col-sm-4">
-          <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
+        <div class="col-sm-4">
           <p>Bitcoin Crypto Predictor</p>
+          <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
         </div>
         <div class="col-sm-4">
-          <img src="projects/printf.gif" alt="Printf">
-          <p>Custom Printf Function</p>
+          <p>Wildfire website</p>
+          <img src="projects/wildfire.gif" alt="Wildfire">
         </div>
         <div class="col-sm-4">
-          <img src="projects/dockerHearts.png" alt="Docker Heart Security">
           <p>Docker Hearts Security</p>
+          <img src="projects/dockerHearts.png" alt="Docker Heart Security">
         </div>
       </div>
       <div class="row">
@@ -65,8 +63,8 @@
           <p>Airbnb Housing Clone</p>
         </div>
         <div class="col-sm-4">
-          <img src="projects/wildfire.gif" alt="Wildfire">
-          <p>Wildfire website</p>
+          <p>Custom Printf Function</p>
+          <img src="projects/printf.gif" alt="Printf">
         </div>
       </div>
     </div>
