remove horizontal scrollbar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="projects/shell.gif" alt="Simple Shell">
         </div>
       </div>
-      <div class="row">
+      <br><div class="row">
         <div class="col-sm-4">
           <p>Bitcoin Crypto Predictor</p>
           <img src="projects/bitcoinCryptoPredictor.png" alt="Bitcoin Crypto Predictor">
@@ -57,10 +57,10 @@
           <img src="projects/dockerHearts.png" alt="Docker Heart Security">
         </div>
       </div>
-      <div class="row">
+      <br><div class="row">
         <div class="col-sm-4">
-          <img src="projects/airbnb.png" alt="Airbnb Housing Clone">
           <p>Airbnb Housing Clone</p>
+          <img src="projects/airbnb.png" alt="Airbnb Housing Clone">
         </div>
         <div class="col-sm-4">
           <p>Custom Printf Function</p>
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-  </body>
+  </body><br><br>
 
   <footer>
     <br>cheersmelissa@gmail.com
